--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -50,6 +50,7 @@ tests:
     - genvalidity
     - genvalidity-hspec
     - genvalidity-hspec-aeson
+    - genvalidity-hspec-optics
     - hspec
     - hspec-core
     - mergeful
