Upgraded cursor version

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -47,6 +47,7 @@ tests:
     - genvalidity-hspec-optics
     - hspec
     - hspec-core
+    - pretty-show
     - smos-cursor
     - smos-cursor-gen
     - smos-data
