Something else that compiles

--- a/smos-sync-api-gen/package.yaml
+++ b/smos-sync-api-gen/package.yaml
@@ -18,6 +18,7 @@ library:
     - genvalidity-bytestring
     - genvalidity-mergeful
     - genvalidity-path
+    - genvalidity-typed-uuid
     - genvalidity-uuid
     - smos-sync-api
 
