--- a/stack.yaml
+++ b/stack.yaml
@@ -24,6 +24,10 @@ extra-deps:
 - hakyll-4.13.0.0
 - hakyll-sass-0.2.4
 
+- typed-uuid-0.0.0.0@sha256:623b8c37206aa7da887db0e17f590789fd3d602d7a70742b7486fa038981ef90,1272
+- genvalidity-typed-uuid-0.0.0.0@sha256:3f3e43d3a2876c977aca262a57c2bc9a6f7411d9a071677ebb8ac01504e99acb,1703
+
+
 - git: https://github.com/NorfairKing/mergeful
   commit: 83dc4d8e9415391aa6a1fde37e6af0bbc8bbf4f0
   subdirs:
