--- a/smos-sync-server/package.yaml
+++ b/smos-sync-server/package.yaml
@@ -18,6 +18,7 @@ library:
   - aeson-pretty
   - base64-bytestring
   - bytestring
+  - containers
   - mergeful
   - monad-logger
   - mtl
@@ -34,6 +35,7 @@ library:
   - stm
   - text
   - uuid
+  - typed-uuid
   - wai
   - warp
   - yaml
