started converting the client to using sqlite too

--- a/smos-sync-client/package.yaml
+++ b/smos-sync-client/package.yaml
@@ -30,6 +30,9 @@ library:
   - optparse-applicative
   - path
   - path-io
+  - persistent
+  - persistent-sqlite
+  - persistent-template
   - pretty-show
   - servant-client
   - smos-report
