Started using generic servant, before we add the auth

--- a/smos-sync-client/package.yaml
+++ b/smos-sync-client/package.yaml
@@ -36,6 +36,7 @@ library:
   - persistent-template
   - pretty-show
   - servant-client
+  - servant-flatten
   - smos-report
   - smos-sync-api
   - stm
