--- a/smos-sync-api/package.yaml
+++ b/smos-sync-api/package.yaml
@@ -17,11 +17,14 @@ library:
   - aeson
   - aeson-pretty
   - base64-bytestring
+  - bcrypt
   - bytestring
+  - hashable
   - mergeful
   - mtl
   - path
   - path-io
+  - path-pieces
   - persistent
   - persistent-sqlite
   - pretty-show
@@ -33,6 +36,7 @@ library:
   - validity
   - validity-bytestring
   - validity-path
+  - validity-text
   - validity-uuid
   - wai
   - warp
