some tests for the register endpoint

--- a/smos-sync-api-gen/package.yaml
+++ b/smos-sync-api-gen/package.yaml
@@ -18,9 +18,11 @@ library:
     - genvalidity-bytestring
     - genvalidity-mergeful
     - genvalidity-path
+    - genvalidity-text
     - genvalidity-typed-uuid
     - genvalidity-uuid
     - smos-sync-api
+    - text
 
 tests:
   smos-sync-api-test:
