--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -24,6 +24,7 @@ library:
   - path
   - path-io
   - persistent-sqlite
+  - servant-auth-server
   - servant-client
   - smos-api-gen
   - smos-client
