--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -24,6 +24,7 @@ library:
   - path
   - path-io
   - persistent-sqlite
+  - servant-auth-client
   - servant-auth-server
   - servant-client
   - smos-api-gen
@@ -51,6 +52,7 @@ tests:
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - hspec
+    - http-types
     - path
     - path-io
     - servant-client
