--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -15,6 +15,7 @@ library:
   ghc-options: -Wall
   dependencies:
   - QuickCheck
+  - async
   - bytestring
   - containers
   - genvalidity
@@ -23,6 +24,7 @@ library:
   - hspec-core
   - http-client
   - mergeful
+  - monad-logger
   - path
   - path-io
   - servant-client
@@ -64,6 +66,7 @@ tests:
     - persistent
     - persistent-sqlite
     - pretty-show
+    - servant-auth-client
     - servant-client
     - smos-api
     - smos-client
