use sha256 instead of haskell's hashing in the sync client

--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -35,6 +35,7 @@ library:
   - servant-client
   - smos-api
   - smos-api-gen
+  - pantry
   - smos-client
   - smos-server-gen
   - smos-sync-client
