--- a/stack.yaml
+++ b/stack.yaml
@@ -11,6 +11,7 @@ packages:
 - smos-report-cursor-gen
 - smos-query
 - smos-single
+- smos-scheduler
 - smos-convert-org
 - smos-archive
 - smos-docs-site
