--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -14,6 +14,8 @@ library:
   dependencies:
   - QuickCheck
   - base >=4.9 && <=5
+  - containers
+  - cursor
   - genvalidity
   - genvalidity-containers
   - genvalidity-path
@@ -22,6 +24,7 @@ library:
   - smos-data
   - smos-data-gen
   - smos-report
+  - text
   - time
 
 tests:
