--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -48,6 +48,7 @@ tests:
     - genvalidity-path
     - hspec
     - megaparsec
+    - path
     - smos-cursor
     - smos-cursor-gen
     - smos-data
