--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -8,6 +8,7 @@
       - "Smos.Draw.drawEntry"
       - "Smos.Draw.drawEntryCursor"
       - "Smos.IntegrationSpec.spec"
+      - "Smos.Report.FilterSpec.spec"
       - "Smos.Sync.Client.Sync.IntegrationSpec.spec"
       - "Smos.Sync.Client.Sync.SaveSpec.spec"
 - ignore:
