--- a/smos-api-gen/package.yaml
+++ b/smos-api-gen/package.yaml
@@ -14,6 +14,7 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+    - QuickCheck
     - genvalidity
     - genvalidity-bytestring
     - genvalidity-mergeful
