fixed the clocking out bug

--- a/smos/test_resources/config/yaml/complete.yaml
+++ b/smos/test_resources/config/yaml/complete.yaml
@@ -121,6 +121,8 @@ keys:
       key: E
     - action: selectHelp
       key: '?'
+    - action: forestClockOutEverywhereInAllFiles
+      key: co
     - action: reportNextActions
       key: rn
     logbook:
