Set up a bunch of stubs to start filling in the template rendering

--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -13,6 +13,8 @@ library:
   dependencies:
     - base
     - aeson
+    - bytestring
+    - containers
     - mtl
     - optparse-applicative
     - path
@@ -22,6 +24,7 @@ library:
     - smos-report
     - text
     - time
+    - yaml
 
 executables:
   smos-scheduler:
