scheduling on a schedule

--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -11,10 +11,11 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
-    - base
     - aeson
+    - base
     - bytestring
     - containers
+    - cron
     - mtl
     - optparse-applicative
     - path
