--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -61,6 +61,8 @@ benchmarks:
     dependencies:
     - QuickCheck
     - gauge
+    - genvalidity-containers
     - genvalidity
     - smos-data
     - smos-data-gen
+    - containers
