tried to speed up the tests, now they hang infinitely

--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -60,7 +60,7 @@ benchmarks:
     - -Wall
     dependencies:
     - QuickCheck
-    - gauge
+    - criterion # gauge
     - genvalidity-containers
     - genvalidity
     - smos-data
