using the new genvalidity-criterion

--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -60,8 +60,9 @@ benchmarks:
     - -Wall
     dependencies:
     - QuickCheck
-    - criterion # gauge
+    - criterion
     - genvalidity-containers
+    - genvalidity-criterion
     - genvalidity
     - smos-data
     - smos-data-gen
