Upgraded dependencies and sped up test suite even more

--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -23,6 +23,7 @@ library:
   - genvalidity-path
   - genvalidity-text
   - genvalidity-time
+  - path
   - smos-data
   - smos-data-gen
   - smos-report
