managed to get the smos-cursor tests to run again, but they fail

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -52,3 +52,22 @@ tests:
     - smos-cursor-gen
     - smos-data
     - smos-data-gen
+
+benchmarks:
+  smos-cursor-bench:
+    main:                Bench.hs
+    source-dirs:         bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - criterion
+    - cursor
+    - cursor-fuzzy-time
+    - cursor-fuzzy-time-gen
+    - genvalidity-criterion
+    - smos-cursor
+    - smos-cursor-gen
+    - smos-data
+    - smos-data-gen
