fixed a test case

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -25,6 +25,7 @@ library:
   - fuzzy-time
   - fuzzy-time-gen
   - genvalidity
+  - genvalidity-text
   - genvalidity-time
   - smos-cursor
   - smos-data
