upgraded the nix-based pre-commit hooks

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -59,3 +59,5 @@
       - "Smos.Draw.completedForestNumbersWidget"
       - "Smos.Sync.Client.Contents"
       - "Smos.Sync.Client.isHidden"
+- ignore:
+    name: "Replace case with maybe"
