--- a/stack.yaml
+++ b/stack.yaml
@@ -33,45 +33,45 @@ extra-deps:
 - Validation-0.2.0@sha256:59c15dd11f509dbea585f590be0e2676de9d764e2812f584d13de86ab939542b,1130
 
 
-- git: https://github.com/GaloisInc/sqlite.git
+- github: GaloisInc/sqlite
   commit: e93ee84000c1d1eedbc23036c4a20ffd07e3145f
 
-- git: https://github.com/NorfairKing/persistent
+- github: NorfairKing/persistent
   commit: 0e3bbb1bd2f5f6383f9eb0407a2416e8b12255ee
   subdirs:
     - persistent
     - persistent-template
     - persistent-sqlite
 
-- git: https://github.com/NorfairKing/mergeful
+- github: NorfairKing/mergeful
   commit: 475acb1b65fbb43caa6e149baed5689bfc4b97c1
   subdirs:
     - mergeful
     - genvalidity-mergeful
-- git: https://github.com/ixmatus/orgmode-parse
+- github: ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
-- git: https://github.com/NorfairKing/pretty-relative-time.git
+- github: NorfairKing/pretty-relative-time
   commit: 21b29c9d729ed91a56819f569de6fdc8582d7e3d
-- git: https://github.com/NorfairKing/cursor-fuzzy-time.git
+- github: NorfairKing/cursor-fuzzy-time
   commit: ed00bd205d45ce80bab31bc81fb25ff02cf6ed5a
   subdirs:
     - cursor-fuzzy-time
     - cursor-fuzzy-time-gen
-- git: https://github.com/NorfairKing/fuzzy-time.git
+- github: NorfairKing/fuzzy-time
   commit: 2122037216d64972303f6a26d8b10598c85fb14f
   subdirs:
     - fuzzy-time
     - fuzzy-time-gen
-- git: https://github.com/NorfairKing/cursor-brick.git
+- github: NorfairKing/cursor-brick
   commit: 178d50eac204cdae3d3aeb92c673b18f6245a4cb
   subdirs:
     - cursor-brick
-- git: https://github.com/NorfairKing/cursor.git
+- github: NorfairKing/cursor
   commit: 452e43cb466f8ac010da8318f84836e8ceca1efe
   subdirs:
     - cursor
     - cursor-gen
-- git: https://github.com/NorfairKing/validity.git
+- github: NorfairKing/validity
   commit: 04ef274e8be3595f5846645f5922791292653e03
   subdirs:
   - genvalidity
