tried to fix the yaml

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -12,11 +12,11 @@ jobs:
       with:
         name: validity
         skipNixBuild: true
-    - uses: cachix/cachix-action@v3
+    - uses: cachix/cachix-action@releases/v3
       with:
         name: smos
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - uses: cachix/cachix-action@v3
+    - uses: cachix/cachix-action@releases/v3
       with:
         name: smos
         file: nix/release.nix
