--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -14,6 +14,10 @@ jobs:
         skipNixBuild: true
     - uses: cachix/cachix-action@releases/v3
       with:
+        name: mergeful
+        skipNixBuild: true
+    - uses: cachix/cachix-action@releases/v3
+      with:
         name: smos
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
     - uses: cachix/cachix-action@releases/v3
