refactored smos-archive and added a testsuite

--- a/smos-archive/package.yaml
+++ b/smos-archive/package.yaml
@@ -7,11 +7,13 @@ copyright: ! 'Copyright: (c) 2018-2019 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
+dependencies:
+- base
+
 library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
-    - base
     - containers
     - mtl
     - optparse-applicative
@@ -20,11 +22,21 @@ library:
     - smos-data
     - smos-report
     - time
+    - validity
 
 executables:
   smos-archive:
     main: Main.hs
     source-dirs: app
     dependencies:
-    - base
     - smos-archive
+
+tests:
+  smos-archive-test:
+    main: Spec.hs
+    source-dirs: test
+    dependencies:
+    - genvalidity-hspec
+    - hspec
+    - smos-archive
+
