builds on nixos

--- a/stack.yaml
+++ b/stack.yaml
@@ -107,3 +107,6 @@ extra-deps:
   - validity-vector
 nix:
   path: [ "nixpkgs=https://github.com/NixOS/nixpkgs/archive/e6b93257b0ba070bd12810eeacbe281396c24316.tar.gz" ]
+  add-gc-roots: true
+  packages:
+  - zlib
