Adds command reference and keybinding reference pages (autogenerated)
The generated pages are partial to gather feedback about the optimal
solution.

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -13,6 +13,9 @@ library:
   - base >= 4.7 && < 5
   - hakyll
   - hakyll-sass
+  - smos
+  - text
+  - directory
 
 executables:
   smos-docs-site:
