--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -11,17 +11,18 @@ library:
   source-dirs: src
   dependencies:
   - base >= 4.7
+  - cmark-gfm
+  - conduit
+  - data-default
   - path
-  - template-haskell
-  - yesod
+  - path-io
   - shakespeare
+  - template-haskell
+  - text
   - th-lift-instances
   - time
-  - text
-  - conduit
-  - cmark-gfm
-  - path-io
-  - data-default
+  - yesod
+  - yesod-static
 
 executables:
   smos-docs-site:
