docs: autogenerated reference docs for argument parsing for smos-query

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -14,10 +14,12 @@ library:
   - cmark-gfm
   - conduit
   - data-default
+  - optparse-applicative
   - path
   - path-io
   - shakespeare
   - smos
+  - smos-query
   - template-haskell
   - text
   - th-lift-instances
