fixed the build

--- a/smos/test_resources/config/yaml/complete.yaml
+++ b/smos/test_resources/config/yaml/complete.yaml
@@ -276,7 +276,7 @@ keys:
     header:
     - action: entrySelectWhole
       key: <Esc>
-    - action: entrySelectWhole
+    - action: entrySelectContents
       key: <Enter>
     - action: headerInsert
       key: <char>
